# DyAda

./: .gitignore  CITATION.cff  README.md  coverage.svg.license  dyada_tutorial.py  pyproject.toml  requirements.txt  showcase.py
.github/workflows/: licenses.yaml  publish-to-pypi.yml  python-coverage.yml  python-lint-and-test.yml  python-package.yml  python-showcase.yml  python-test-tutorial-and-to-readme.yml
docs/gfx/: octree_solid.tex  octree_tree.tex  omnitree.svg.license  omnitree.tex  showcase.gif.license  tikz_cubes_solid.tex  tikz_cuboids_solid.tex
src/dyada/: __init__.py  ancestrybranch.py  coordinates.py  descriptor.py  descriptor_builder.py  discretization.py  downsplit.py  drawing.py  drawing_opengl_obj.py  drawing_tikz.py  drawing_util.py  linearization.py  locationcodemap.py  mappings.py  markers.py  pushdown.py  refinement.py  structure.py
test/: test_anchestrybranch.py  test_coarsening.py  test_coordinates.py  test_descriptor.py  test_descriptor_builder.py  test_discretization.py  test_downsplit.py  test_drawing.py  test_integration.py  test_linearization.py  test_pushdown.py  test_refinement.py  test_refinement_2d.py  test_refinement_3d.py
