# SPDX-FileCopyrightText: 2025 Theresa Pollinger
#
# SPDX-License-Identifier: CC-BY-4.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dyada"
version = "0.0.7"
dynamic = ["authors"]
description = "A Code for Memory-Saving Dyadic Adaptivity in Optimization and Simulation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "bitarray"]

[project.optional-dependencies]
drawing = ["cmap"]
matplotlib = ["matplotlib"]
opengl = ["pyopengl"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
